--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,3 +1,146 @@
 {
-  "msg": "привет"
+  "msg": "привет",
+  "Footer": {
+    "Titul": "Есть вопросы? Звоните нам 24/7!",
+    "Titul1": "Расположение:",
+    "Titul2": "Чиланзарский район, проспект Бунёдкор",
+    "Titul3": "Обслуживание клиентов",
+    "Titul4": "Центр помощи",
+    "Titul5": "Связаться с нами",
+    "Titul6": "Сообщить о нарушении",
+    "Titul7": "Отправить и оспорить",
+    "Titul8": " Политики и правила",
+    "Titul9": "Получайте деньги за ваш отзыв",
+    "Titul10": "Продать на Beshop",
+    "Titul11": "Членство поставщиков",
+    "Titul12": "Обучающий центр",
+    "Titul13": "Партнерская программа",
+    "Titul14": "Купить в beshop",
+    "Titul15": "все категории",
+    "Titul16": "Запрос коммерческого предложения",
+    "Titul17": "Готов к отправке",
+    "Titul18": "beshop.uz. Все права защищены",
+    "Titul19": "Политика в отношении листинга продуктов - Защита интеллектуальной собственности - Политика конфиденциальности - Условия использования - Информация для пользователя Справочное руководство по правовым вопросам"
+  },
+  "HomeSecFive": {
+    "Titul": "Подпишитесь на рассылку новостей",
+    "Titul1": "и получите купон на 20 долларов на первую покупку",
+    "Titul2": "Введите адрес электронной почты",
+    "Titul3": "зарегистрироваться"
+  },
+  "HomeSecFour": {
+    "Titul": "Рекомендуемые",
+    "Titul1": "бренды"
+  },
+  "HomeSecThree": {
+    "Titul": "Специальный Предлагает",
+    "Titul1": "распродажа",
+    "Titul2": "Металлические наушники Liquid Ears Bluetooth - розовое золото",
+    "Titul3": "Осталось дней:",
+    "Titul4": "Уже продано",
+    "Titul5": "С бесплатной доставкой",
+    "Titul6": "Бестселлеры",
+    "Titul7": "ОБЪЯВЛЕНИЕ ЗДЕСЬ"
+  },
+  "HomeTabTwo": {
+    "Titul": "Лучшие сделки",
+    "Titul1": "телевидение",
+    "Titul2": "Камеры",
+    "Titul3": "Аудио",
+    "Titul4": "Телефоны",
+    "Titul5": "Инструменты GPS",
+    "Titul6": "Компьютеры",
+    "Titul7": "Портативный звук",
+    "Titul8": "Аксессуары"
+  },
+  "HomeSecTwo": {
+    "Titul": "Сделка и предложения",
+    "Titul1": "Гигиеническое оборудование"
+  },
+  "CountDown": {
+    "Titul": "Время вышло!"
+  },
+  "ProductDetailRightForm": {
+    "Titul": "Цена",
+    "Titul1": "Скидка",
+    "Titul2": "Продан",
+    "Titul3": "Все продажи",
+    "Titul4": "осталось",
+    "Titul5": "цвет",
+    "Titul6": "Количество"
+  },
+  "ProductDetailUnderSlider": {
+    "Titul": "Купите умные часы Samsung Gear S4 со скидкой 20%, что вызвало самый жаркий шум дня.",
+    "Titul1": "Купи сейчас"
+  },
+  "OtherPageNav": {
+    "Titul": "Категории",
+    "Titul1": "Сервисы",
+    "Titul2": "Продать на Beshop",
+    "Titul3": "Помогите",
+    "Titul4": "Скачайте мобильное приложение",
+    "Titul5": "Узбекский - UZS"
+  },
+  "CardPageRight": {
+    "Titul": "Итоги корзины",
+    "Titul1": "Промежуточный итог",
+    "Titul2": "Перевозка",
+    "Titul3": "Единая ставка:",
+    "Titul4": "Рассчитать стоимость доставки",
+    "Titul5": "Всего",
+    "Titul6": "ПРИМЕНЯТЬ",
+    "Titul7": "обновить корзину",
+    "Titul8": "Оплатить",
+    "Titul9": "Код купона"
+  },
+  "WishListPage": {
+    "Titul": "Мой список желаний на BeShop",
+    "Titul1": "ПРОДУКТ",
+    "Titul2": "ЦЕНА",
+    "Titul3": "КОЛИЧЕСТВО",
+    "Titul4": "СОСТОЯНИЕ АКЦИЙ"
+  },
+  "CheckOutPage": {
+    "Titul": "Выбранные вами продукты",
+    "Titul1": "платежная информация",
+    "Titul2": "Имя",
+    "Titul3": "Фамилия",
+    "Titul4": "название компании",
+    "Titul5": "Необязательный",
+    "Titul6": "Страна",
+    "Titul7": "Адрес улицы",
+    "Titul8": "Почтовый индекс / Почтовый индекс",
+    "Titul9": "состояние",
+    "Titul10": "Адрес электронной почты",
+    "Titul11": "Завести аккаунт?",
+    "Titul12": "* Если вы выберете эту опцию, для вас будет открыта учетная запись на основе информации, которую вы ввели выше..",
+    "Titul13": "Детали доставки",
+    "Titul14": "CЗавести аккаунт ?",
+    "Titul15": "Кв, люкс и др.",
+    "Titul16": "город",
+    "Titul17": "Почтовый индекс / Почтовый индекс",
+    "Titul18": "Телефон",
+    "Titul19": "Примечания к заказу",
+    "Titul20": "Необходимые!",
+    "Titul21": "Неверный адрес электронной почты",
+    "Titul22": "Слишком коротко!",
+    "Titul23": "Слишком долго!",
+    "Titul24": "Есть купон?",
+    "Titul25": "Нажмите здесь, чтобы ввести свой код",
+    "Titul26": "твоя очередь",
+    "Titul27": "Продукт",
+    "Titul28": "Всего",
+    "Titul29": "Промежуточный итог",
+    "Titul30": "Перевозка",
+    "Titul31": "Единая ставка:",
+    "Titul32": "Всего",
+    "Titul33": "Прямой банковский перевод",
+    "Titul34": "Проверить платежи",
+    "Titul35": "Наличные при доставке",
+    "Titul36": "Что такое PayPal?",
+    "Titul37": "Я прочитал и согласен с условиями использования веб-сайта *",
+    "Titul38": "Первичный",
+    "Titul39": "Возвращающийся клиент?",
+    "Titul40": "Нажмите сюда для авторизации"
+  }
 }
