--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,3 +1,103 @@
 {
-  "msg": "привет"
+  "msg": "привет",
+  "TopNavOne": {
+    "Titul": "При покупке на сумму более 200 000 сумов доставка по Ташкенту составляет",
+    "Titul2": "Войти",
+    "Titul3": "Подписаться",
+    "Titul4": "или"
+  },
+  "HomeHeader": {
+    "Titul": "Все отделы"
+  },
+  "Login": {
+    "Titul": "Добро пожаловать!",
+    "Titul2": "Войдите, чтобы управлять своей учетной записью.",
+    "Titul3": "Забыли пароль",
+    "Titul4": "АВТОРИЗОВАТЬСЯ",
+    "Titul5": "Еще не регистрировались ?",
+    "Titul6": "Зарегистрироваться",
+    "Titul7": "ИЛИ",
+    "Titul8": "Войдите в свою социальную учетную запись",
+    "Titul9": "Неверный адрес электронной почты",
+    "Titul10": "Необходимые",
+    "Titul11": "Слишком коротко!",
+    "Titul12": "Слишком долго!",
+    "Titul13": "Эл. адрес",
+    "Titul14": "Пароль"
+  },
+  "ResetPass": {
+    "Titul": "Помоги мне:",
+    "Titul2": "Не волнуйтесь, ваш пароль прикреплен к электронному письму, которое вы указали при регистрации.",
+    "Titul3": "РАЗМЕСТИТЬ"
+  },
+  "SignUp": {
+    "Titul2": "Пароли должны совпадать",
+    "Titul3": "Добро пожаловать в Бешоп",
+    "Titul4": "Перед регистрацией выберите тип пользователя",
+    "Titul5": "Я продавец",
+    "Titul6": "Я покупатель",
+    "Titul7": "Ваша электронная почта",
+    "Titul8": "Ваша электронная почта",
+    "Titul9": "Тип вашей отрасли",
+    "Titul10": "Ваше местоположение",
+    "Titul11": "Ваше местоположение",
+    "Titul12": "Введите свой пароль снова",
+    "Titul13": "Конец",
+    "Titul14": "Конец",
+    "Titul15": "Ваш профиль продаж готов, теперь вы можете найти миллионы покупателей.",
+    "Titul16": "перейти в профиль",
+    "Titul17": "настроить свой магазин",
+    "Titul18": "следующий",
+    "Titul19": "Выберите пароль"
+  },
+  "MobSearch": {
+    "Titul": "поиск"
+  },
+  "TopNavTwo": {
+    "Titul": "войти",
+    "Titul2": "Подписаться"
+  },
+  "DropDownCat": {
+    "Titul": "Все Категории"
+  },
+  "ProductHeader": {
+    "Titul": "Одинаковые скидки для всех"
+  },
+  "ProductTab": {
+    "Titul": "Загрузи больше"
+  },
+  "ProductUnderTab": {
+    "Titul": "Подпишитесь на товары в магазине",
+    "Titul2": "Подпишитесь, чтобы хранить новости, чтобы мгновенно получать истории каждого нового продукта.",
+    "Titul3": "Введите адрес электронной почты",
+    "Titul4": "подписываться"
+  },
+  "FaqHeader": {
+    "Titul": "Здравствуйте, чем мы можем вам помочь?",
+    "Titul2": "Продажа",
+    "Titul3": "Покупка",
+    "Titul4": "Перевозка"
+  },
+  "UserAccount": {
+    "Titul": "Мой счет"
+  },
+  "UserLogin": {
+    "Titul": "Авторизоваться",
+    "Titul2": "Добро пожаловать! Войдите в свой аккаунт.",
+    "Titul3": "Имя пользователя или адрес электронной почты",
+    "Titul4": "Введите имя пользователя или адреса электронной почты",
+    "Titul5": "пароль",
+    "Titul6": "Запомни меня",
+    "Titul7": "Забыли пароль?"
+  },
+  "UserRegistration": {
+    "Titul": "Регистрация",
+    "Titul2": "Создайте новую учетную запись сегодня, чтобы воспользоваться преимуществами индивидуального покупательского опыта.",
+    "Titul3": "Ваши личные данные будут использоваться для поддержки вашего взаимодействия с этим сайтом, для управления вашей учетной записью и для других целей, описанных в нашем",
+    "Titul4": " политика конфиденциальности.",
+    "Titul5": "Зарегистрируйтесь сегодня, и вы сможете:",
+    "Titul6": "Ускорьте оформление заказа",
+    "Titul7": "Легко отслеживайте свои заказы",
+    "Titul8": "Записывайте все свои покупки"
+  }
 }
