--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -1,249 +1,249 @@
 {
-  "msg": "salom",
-<<<<<<< HEAD
-  "TopNavOne": {
-    "Titul": "200 000 so'mdan ortiq narxni sotib olayotganda, Toshkent shahrida etkazib berish bepul",
-    "Titul2": "Kirish",
-    "Titul3": "Ro'yxatdan o'tish",
-    "Titul4": "yoki"
-  },
-  "HomeHeader": {
-    "Titul": "Barcha bo'limlar"
-  },
-  "Login": {
-    "Titul": "Xush kelibsiz!",
-    "Titul2": "Hisobingizni boshqarish uchun tizimga kiring.",
-    "Titul3": "Parolni unutdingizmi",
-    "Titul4": "KIRISH",
-    "Titul5": "Hisobingiz yo'qmi ?",
-    "Titul6": "Ro'yxatdan o'tish",
-    "Titul7": "YOKI",
-    "Titul8": "Ijtimoiy hisobingiz bilan kiring",
-    "Titul9": "Elektron pochta yaroqsiz",
-    "Titul10": "Majburiy",
-    "Titul11": "Juda qisqa!",
-    "Titul12": "Juda uzun!",
-    "Titul13": "Elektron pochta",
-    "Titul14": "Parol"
-  },
-  "ResetPass": {
-    "Titul": "Yordam bering:",
-    "Titul2": "Xavotir olmang, parolingiz ro'yxatdan o'tish paytida kiritilgan elektron pochtangizga biriktirilgan.",
-    "Titul3": "YUBORISH"
-  },
-  "SignUp": {
-    "Titul2": "Parollar bir xil bo'lishi kerak",
-    "Titul3": "Beshop-ga xush kelibsiz",
-    "Titul4": "Ro'yxatdan o'tishdan oldin foydalanuvchi turini tanlang",
-    "Titul5": "Men sotuvchiman",
-    "Titul6": "Men xaridorman",
-    "Titul7": "Sizning e-pochta manzilingiz",
-    "Titul8": "Sizning do'koningiz nomi",
-    "Titul9": "Sizning sanoat turingiz",
-    "Titul10": "Sizning joylashuvingiz",
-    "Titul11": "Parolni kiriting",
-    "Titul12": "Parolingizni qayta kiriting",
-    "Titul13": "tugatish",
-    "Titul14": "Tabriklaymiz !!!",
-    "Titul15": "Sizning savdo profilingiz tayyor, endi siz millionlab xaridorlarni topishingiz mumkin.",
-    "Titul16": "profilga o'ting",
-    "Titul17": "do'koningizni sozlang",
-    "Titul18": "Keyingi",
-    "Titul19": "Parolni tanlang"
-  },
-  "MobSearch": {
-    "Titul": "izlang"
-  },
-  "TopNavTwo": {
-    "Titul": "kirish",
-    "Titul2": "ro'yxatdan o'tish"
-  },
-  "DropDownCat": {
-    "Titul": "Barcha Toifalar"
-  },
-  "ProductHeader": {
-    "Titul": "Barchaga bir xil chegirmalar"
-  },
-  "ProductTab": {
-    "Titul": "ko'proq yuklang"
-  },
-  "ProductUnderTab": {
-    "Titul": "Mahsulotlarni saqlash uchun obuna bo'ling",
-    "Titul2": "Yangiliklarni har bir yangi mahsulotning oniy tarixiga saqlash uchun obuna bo'ling.",
-    "Titul3": "Elektron pochta manzilini kiriting",
-    "Titul4": "obuna bo'lish"
-  },
-  "FaqHeader": {
-    "Titul": "Salom, biz sizga qanday yordam bera olamiz?",
-    "Titul2": "Sotish",
-    "Titul3": "Sotib olish",
-    "Titul4": "Yetkazib berish"
-  },
-  "UserAccount": {
-    "Titul": "Mening hisobim"
-  },
-  "UserLogin": {
-    "Titul": "Kirish",
-    "Titul2": "Xush kelibsiz! Hisobingizga kiring.",
-    "Titul3": "Foydalanuvchi nomi yoki elektron pochta manzili",
-    "Titul4": "Foydalanuvchi nomi yoki elektron pochta manzillarini kiriting",
-    "Titul5": "Parol",
-    "Titul6": "Meni eslaysizmi",
-    "Titul7": "Parolni unutdingizmi?"
-  },
-  "UserRegistration": {
-    "Titul": "Ro'yxatdan o'tish",
-    "Titul2": "Shaxsiy xarid qilish tajribasining afzalliklaridan foydalanish uchun bugun yangi hisob yarating.",
-    "Titul3": "Shaxsiy ma'lumotlaringiz ushbu veb-saytdagi tajribangizni qo'llab-quvvatlash, sizning hisob qaydnomangizni boshqarish va bizning sahifamizda tavsiflangan boshqa maqsadlar uchun ishlatiladi",
-    "Titul4": " maxfiylik siyosati.",
-    "Titul5": "Bugun ro'yxatdan o'ting, shunda siz quyidagilarni amalga oshirishingiz mumkin:",
-    "Titul6": "Kassadan o'tishda tezlikni oshiring",
-    "Titul7": "Buyurtmalaringizni osongina kuzatib boring",
-    "Titul8": "Barcha xaridlaringizni qayd qilib qo'ying"
-=======
-  "Footer": {
-    "Titul": "Savollaringiz bormi? Bizga 24/7 qo'ng'iroq qiling!",
-    "Titul1": "Manzil:",
-    "Titul2": "Chilonzor tumani, Bunyodkor shoh ko'chasi",
-    "Titul3": "Mijozlarga xizmat ko'rsatish",
-    "Titul4": "Yordam markazi",
-    "Titul5": "Biz bilan bog'lanish",
-    "Titul6": "Noqonuniy foydalanish to'g'risida xabar bering",
-    "Titul7": "Taqdim etish va nizo",
-    "Titul8": "Siyosatlar va qoidalar",
-    "Titul9": "Fikringiz uchun pul oling",
-    "Titul10": "Beshop-da soting",
-    "Titul11": "Ta'minlovchiga a'zolik",
-    "Titul12": "O'quv markazi",
-    "Titul13": "Hamkorlik dasturi",
-    "Titul14": "Beshop-da sotib oling",
-    "Titul15": "Barcha toifalar",
-    "Titul16": "Kotirovka uchun so'rov",
-    "Titul17": "Yuk tashishga tayyormiz",
-    "Titul18": "beshop.uz. Barcha huquqlar himoyalangan",
-    "Titul19": "Mahsulotlarni ro'yxatga olish siyosati - Intellektual mulkni himoya qilish - Maxfiylik siyosati - Foydalanish shartlari - Foydalanuvchi to'g'risidagi ma'lumotlar Huquqiy so'rovlar bo'yicha qo'llanma"
-  },
-  "HomeSecFive": {
-    "Titul": "Axborotnomaga yoziling",
-    "Titul1": "va birinchi xarid uchun $ 20 kuponini oling",
-    "Titul2": "Elektron pochta manzilini kiriting",
-    "Titul3": "Ro'yxatdan o'tish"
-  },
-  "HomeSecFour": {
-    "Titul": "Tavsiya etilgan",
-    "Titul1": "ning",
-    "Titul2": "brandlari"
-  },
-  "HomeSecThree": {
-    "Titul": "Maxsus Taklif",
-    "Titul1": "Sotish",
-    "Titul2": "Suyuq quloqlar Bluetooth metalik minigarnituralar - Rose Gold",
-    "Titul3": "Kunlar qoldi:",
-    "Titul4": "Allaqachon sotilgan",
-    "Titul5": "Bepul etkazib berish bilan",
-    "Titul6": "Eng yaxshi sotuvchilar",
-    "Titul7": "Reklama bu erda"
-  },
-  "HomeTabTwo": {
-    "Titul": "Eng yaxshi narxlar",
-    "Titul1": "Televizor",
-    "Titul2": "Kameralar",
-    "Titul3": "Ovoz",
-    "Titul4": "Telefonlar",
-    "Titul5": "GPS vositalari",
-    "Titul6": "Kompyuterlar",
-    "Titul7": "Portativ audio",
-    "Titul8": "Aksessuarlar"
-  },
-  "HomeSecTwo": {
-    "Titul": "Bitim va takliflar",
-    "Titul1": "Gigiena vositalari"
-  },
-  "CountDown": {
-    "Titul": "Vaqt tugadi!"
-  },
-  "ProductDetailRightForm": {
-    "Titul": "Narx",
-    "Titul1": "Chegirma",
-    "Titul2": "Sotuvchi",
-    "Titul3": "Barcha sotuvlar",
-    "Titul4": "Qolgan",
-    "Titul5": "Rang",
-    "Titul6": "Miqdor"
-  },
-  "ProductDetailUnderSlider": {
-    "Titul": "Samsung Gear S4 Smartwatch-ni 20% chegirma bilan sotib oling, bu kunning eng issiq shovqiniga sabab bo'ldi.",
-    "Titul1": "hozir xarid qilish"
-  },
-  "OtherPageNav": {
-    "Titul": "Kategoriyalar",
-    "Titul1": "Xizmatlar",
-    "Titul2": "Beshop-da soting",
-    "Titul3": "Yordam",
-    "Titul4": "Mobil ilovani yuklab oling",
-    "Titul5": "O'zbek - so'm"
-  },
-  "CardPageRight": {
-    "Titul": "Jami savat",
-    "Titul1": "Jami",
-    "Titul2": "yuk tashish; yetkazib berish",
-    "Titul3": "Yagona narx:",
-    "Titul4": "Yuk tashishni hisoblang",
-    "Titul5": "Jami",
-    "Titul6": "QO'LLANILADI",
-    "Titul7": "yangilash aravasi",
-    "Titul8": "hozirda chiqing",
-    "Titul9": "Kupon kodi"
-  },
-  "WishListPage": {
-    "Titul": "BeShop-dagi istaklarim ro'yxati",
-    "Titul1": "MAHSULOT",
-    "Titul2": "NARX",
-    "Titul3": "Miqdor",
-    "Titul4": "AKSIYa STATUSI"
-  },
-  "CheckOutPage": {
-    "Titul": "Siz tanlagan mahsulotlar",
-    "Titul1": "hisob-kitob detali",
-    "Titul2": "Ism",
-    "Titul3": "Familiya",
-    "Titul4": "kopmaniya nomi",
-    "Titul5": "Ixtiyoriy",
-    "Titul6": "Mamlakat",
-    "Titul7": "Ko'cha manzili",
-    "Titul8": "Pochta indeksi / Zip",
-    "Titul9": "Shtat",
-    "Titul10": "Elektron pochta manzili",
-    "Titul11": "Hisob ochish?",
-    "Titul12": "* Agar siz ushbu parametrni tanlasangiz, yuqorida siz kiritgan ma'lumotlarga asoslanib siz uchun hisob qaydnomasi ochiladi.",
-    "Titul13": "Yuk tashish tafsilotlari",
-    "Titul14": "Hisob ochish ?",
-    "Titul15": "Xonadon, Suite va boshqalar.",
-    "Titul16": "Shahar",
-    "Titul17": "Pochta indeksi / Zip",
-    "Titul18": "Telefon",
-    "Titul19": "Buyurtma eslatmalari",
-    "Titul20": "Kerak!",
-    "Titul21": "Elektron pochta yaroqsiz",
-    "Titul22": "Juda qisqa!",
-    "Titul23": "Juda uzun!",
-    "Titul24": "Kupon bormi?",
-    "Titul25": "Kodingizni kiritish uchun shu erni bosing",
-    "Titul26": "sizning buyurtmangiz",
-    "Titul27": "Mahsulot",
-    "Titul28": "Jami",
-    "Titul29": "subtotal",
-    "Titul30": "yuk tashish; yetkazib berish",
-    "Titul31": "Yagona narx:",
-    "Titul32": "jami",
-    "Titul33": "To'g'ridan-to'g'ri bank o'tkazmasi",
-    "Titul34": "To'lovlarni tekshiring",
-    "Titul35": "Naqd etkazib berish",
-    "Titul36": "PayPal nima?",
-    "Titul37": "Veb-sayt shartlari bilan o'qidim va roziman *",
-    "Titul38": "Birlamchi",
-    "Titul39": "Qaytgan mijozmi?",
-    "Titul40": "Kirish uchun shu erni bosing"
->>>>>>> 088c227aed7f22f476b95fd8afb9f6778c1ec8fe
-  }
+    "msg": "salom",
+
+    "TopNavOne": {
+        "Titul": "200 000 so'mdan ortiq narxni sotib olayotganda, Toshkent shahrida etkazib berish bepul",
+        "Titul2": "Kirish",
+        "Titul3": "Ro'yxatdan o'tish",
+        "Titul4": "yoki"
+    },
+    "HomeHeader": {
+        "Titul": "Barcha bo'limlar"
+    },
+    "Login": {
+        "Titul": "Xush kelibsiz!",
+        "Titul2": "Hisobingizni boshqarish uchun tizimga kiring.",
+        "Titul3": "Parolni unutdingizmi",
+        "Titul4": "KIRISH",
+        "Titul5": "Hisobingiz yo'qmi ?",
+        "Titul6": "Ro'yxatdan o'tish",
+        "Titul7": "YOKI",
+        "Titul8": "Ijtimoiy hisobingiz bilan kiring",
+        "Titul9": "Elektron pochta yaroqsiz",
+        "Titul10": "Majburiy",
+        "Titul11": "Juda qisqa!",
+        "Titul12": "Juda uzun!",
+        "Titul13": "Elektron pochta",
+        "Titul14": "Parol"
+    },
+    "ResetPass": {
+        "Titul": "Yordam bering:",
+        "Titul2": "Xavotir olmang, parolingiz ro'yxatdan o'tish paytida kiritilgan elektron pochtangizga biriktirilgan.",
+        "Titul3": "YUBORISH"
+    },
+    "SignUp": {
+        "Titul2": "Parollar bir xil bo'lishi kerak",
+        "Titul3": "Beshop-ga xush kelibsiz",
+        "Titul4": "Ro'yxatdan o'tishdan oldin foydalanuvchi turini tanlang",
+        "Titul5": "Men sotuvchiman",
+        "Titul6": "Men xaridorman",
+        "Titul7": "Sizning e-pochta manzilingiz",
+        "Titul8": "Sizning do'koningiz nomi",
+        "Titul9": "Sizning sanoat turingiz",
+        "Titul10": "Sizning joylashuvingiz",
+        "Titul11": "Parolni kiriting",
+        "Titul12": "Parolingizni qayta kiriting",
+        "Titul13": "tugatish",
+        "Titul14": "Tabriklaymiz !!!",
+        "Titul15": "Sizning savdo profilingiz tayyor, endi siz millionlab xaridorlarni topishingiz mumkin.",
+        "Titul16": "profilga o'ting",
+        "Titul17": "do'koningizni sozlang",
+        "Titul18": "Keyingi",
+        "Titul19": "Parolni tanlang"
+    },
+    "MobSearch": {
+        "Titul": "izlang"
+    },
+    "TopNavTwo": {
+        "Titul": "kirish",
+        "Titul2": "ro'yxatdan o'tish"
+    },
+    "DropDownCat": {
+        "Titul": "Barcha Toifalar"
+    },
+    "ProductHeader": {
+        "Titul": "Barchaga bir xil chegirmalar"
+    },
+    "ProductTab": {
+        "Titul": "ko'proq yuklang"
+    },
+    "ProductUnderTab": {
+        "Titul": "Mahsulotlarni saqlash uchun obuna bo'ling",
+        "Titul2": "Yangiliklarni har bir yangi mahsulotning oniy tarixiga saqlash uchun obuna bo'ling.",
+        "Titul3": "Elektron pochta manzilini kiriting",
+        "Titul4": "obuna bo'lish"
+    },
+    "FaqHeader": {
+        "Titul": "Salom, biz sizga qanday yordam bera olamiz?",
+        "Titul2": "Sotish",
+        "Titul3": "Sotib olish",
+        "Titul4": "Yetkazib berish"
+    },
+    "UserAccount": {
+        "Titul": "Mening hisobim"
+    },
+    "UserLogin": {
+        "Titul": "Kirish",
+        "Titul2": "Xush kelibsiz! Hisobingizga kiring.",
+        "Titul3": "Foydalanuvchi nomi yoki elektron pochta manzili",
+        "Titul4": "Foydalanuvchi nomi yoki elektron pochta manzillarini kiriting",
+        "Titul5": "Parol",
+        "Titul6": "Meni eslaysizmi",
+        "Titul7": "Parolni unutdingizmi?"
+    },
+    "UserRegistration": {
+        "Titul": "Ro'yxatdan o'tish",
+        "Titul2": "Shaxsiy xarid qilish tajribasining afzalliklaridan foydalanish uchun bugun yangi hisob yarating.",
+        "Titul3": "Shaxsiy ma'lumotlaringiz ushbu veb-saytdagi tajribangizni qo'llab-quvvatlash, sizning hisob qaydnomangizni boshqarish va bizning sahifamizda tavsiflangan boshqa maqsadlar uchun ishlatiladi",
+        "Titul4": " maxfiylik siyosati.",
+        "Titul5": "Bugun ro'yxatdan o'ting, shunda siz quyidagilarni amalga oshirishingiz mumkin:",
+        "Titul6": "Kassadan o'tishda tezlikni oshiring",
+        "Titul7": "Buyurtmalaringizni osongina kuzatib boring",
+        "Titul8": "Barcha xaridlaringizni qayd qilib qo'ying",
+    },
+    "Footer": {
+        "Titul": "Savollaringiz bormi? Bizga 24/7 qo'ng'iroq qiling!",
+        "Titul1": "Manzil:",
+        "Titul2": "Chilonzor tumani, Bunyodkor shoh ko'chasi",
+        "Titul3": "Mijozlarga xizmat ko'rsatish",
+        "Titul4": "Yordam markazi",
+        "Titul5": "Biz bilan bog'lanish",
+        "Titul6": "Noqonuniy foydalanish to'g'risida xabar bering",
+        "Titul7": "Taqdim etish va nizo",
+        "Titul8": "Siyosatlar va qoidalar",
+        "Titul9": "Fikringiz uchun pul oling",
+        "Titul10": "Beshop-da soting",
+        "Titul11": "Ta'minlovchiga a'zolik",
+        "Titul12": "O'quv markazi",
+        "Titul13": "Hamkorlik dasturi",
+        "Titul14": "Beshop-da sotib oling",
+        "Titul15": "Barcha toifalar",
+        "Titul16": "Kotirovka uchun so'rov",
+        "Titul17": "Yuk tashishga tayyormiz",
+        "Titul18": "beshop.uz. Barcha huquqlar himoyalangan",
+        "Titul19": "Mahsulotlarni ro'yxatga olish siyosati - Intellektual mulkni himoya qilish - Maxfiylik siyosati - Foydalanish shartlari - Foydalanuvchi to'g'risidagi ma'lumotlar Huquqiy so'rovlar bo'yicha qo'llanma"
+    },
+    "HomeSecFive": {
+        "Titul": "Axborotnomaga yoziling",
+        "Titul1": "va birinchi xarid uchun $ 20 kuponini oling",
+        "Titul2": "Elektron pochta manzilini kiriting",
+        "Titul3": "Ro'yxatdan o'tish"
+    },
+    "HomeSecFour": {
+        "Titul": "Tavsiya etilgan",
+        "Titul1": "ning",
+        "Titul2": "brandlari"
+    },
+    "HomeSecThree": {
+        "Titul": "Maxsus Taklif",
+        "Titul1": "Sotish",
+        "Titul2": "Suyuq quloqlar Bluetooth metalik minigarnituralar - Rose Gold",
+        "Titul3": "Kunlar qoldi:",
+        "Titul4": "Allaqachon sotilgan",
+        "Titul5": "Bepul etkazib berish bilan",
+        "Titul6": "Eng yaxshi sotuvchilar",
+        "Titul7": "Reklama bu erda"
+    },
+    "HomeTabTwo": {
+        "Titul": "Eng yaxshi narxlar",
+        "Titul1": "Televizor",
+        "Titul2": "Kameralar",
+        "Titul3": "Ovoz",
+        "Titul4": "Telefonlar",
+        "Titul5": "GPS vositalari",
+        "Titul6": "Kompyuterlar",
+        "Titul7": "Portativ audio",
+        "Titul8": "Aksessuarlar"
+    },
+    "HomeSecTwo": {
+        "Titul": "Bitim va takliflar",
+        "Titul1": "Gigiena vositalari"
+    },
+    "CountDown": {
+        "Titul": "Vaqt tugadi!"
+    },
+    "ProductDetailRightForm": {
+        "Titul": "Narx",
+        "Titul1": "Chegirma",
+        "Titul2": "Sotuvchi",
+        "Titul3": "Barcha sotuvlar",
+        "Titul4": "Qolgan",
+        "Titul5": "Rang",
+        "Titul6": "Miqdor"
+    },
+    "ProductDetailUnderSlider": {
+        "Titul": "Samsung Gear S4 Smartwatch-ni 20% chegirma bilan sotib oling, bu kunning eng issiq shovqiniga sabab bo'ldi.",
+        "Titul1": "hozir xarid qilish"
+    },
+    "OtherPageNav": {
+        "Titul": "Kategoriyalar",
+        "Titul1": "Xizmatlar",
+        "Titul2": "Beshop-da soting",
+        "Titul3": "Yordam",
+        "Titul4": "Mobil ilovani yuklab oling",
+        "Titul5": "O'zbek - so'm"
+    },
+    "CardPageRight": {
+        "Titul": "Jami savat",
+        "Titul1": "Jami",
+        "Titul2": "yuk tashish; yetkazib berish",
+        "Titul3": "Yagona narx:",
+        "Titul4": "Yuk tashishni hisoblang",
+        "Titul5": "Jami",
+        "Titul6": "QO'LLANILADI",
+        "Titul7": "yangilash aravasi",
+        "Titul8": "hozirda chiqing",
+        "Titul9": "Kupon kodi"
+    },
+    "WishListPage": {
+        "Titul": "BeShop-dagi istaklarim ro'yxati",
+        "Titul1": "MAHSULOT",
+        "Titul2": "NARX",
+        "Titul3": "Miqdor",
+        "Titul4": "AKSIYa STATUSI"
+    },
+    "CheckOutPage": {
+        "Titul": "Siz tanlagan mahsulotlar",
+        "Titul1": "hisob-kitob detali",
+        "Titul2": "Ism",
+        "Titul3": "Familiya",
+        "Titul4": "kopmaniya nomi",
+        "Titul5": "Ixtiyoriy",
+        "Titul6": "Mamlakat",
+        "Titul7": "Ko'cha manzili",
+        "Titul8": "Pochta indeksi / Zip",
+        "Titul9": "Shtat",
+        "Titul10": "Elektron pochta manzili",
+        "Titul11": "Hisob ochish?",
+        "Titul12": "* Agar siz ushbu parametrni tanlasangiz, yuqorida siz kiritgan ma'lumotlarga asoslanib siz uchun hisob qaydnomasi ochiladi.",
+        "Titul13": "Yuk tashish tafsilotlari",
+        "Titul14": "Hisob ochish ?",
+        "Titul15": "Xonadon, Suite va boshqalar.",
+        "Titul16": "Shahar",
+        "Titul17": "Pochta indeksi / Zip",
+        "Titul18": "Telefon",
+        "Titul19": "Buyurtma eslatmalari",
+        "Titul20": "Kerak!",
+        "Titul21": "Elektron pochta yaroqsiz",
+        "Titul22": "Juda qisqa!",
+        "Titul23": "Juda uzun!",
+        "Titul24": "Kupon bormi?",
+        "Titul25": "Kodingizni kiritish uchun shu erni bosing",
+        "Titul26": "sizning buyurtmangiz",
+        "Titul27": "Mahsulot",
+        "Titul28": "Jami",
+        "Titul29": "subtotal",
+        "Titul30": "yuk tashish; yetkazib berish",
+        "Titul31": "Yagona narx:",
+        "Titul32": "jami",
+        "Titul33": "To'g'ridan-to'g'ri bank o'tkazmasi",
+        "Titul34": "To'lovlarni tekshiring",
+        "Titul35": "Naqd etkazib berish",
+        "Titul36": "PayPal nima?",
+        "Titul37": "Veb-sayt shartlari bilan o'qidim va roziman *",
+        "Titul38": "Birlamchi",
+        "Titul39": "Qaytgan mijozmi?",
+        "Titul40": "Kirish uchun shu erni bosing"
+
+    }
 }
