--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -99,7 +99,7 @@
         "Titul5": "Bugun ro'yxatdan o'ting, shunda siz quyidagilarni amalga oshirishingiz mumkin:",
         "Titul6": "Kassadan o'tishda tezlikni oshiring",
         "Titul7": "Buyurtmalaringizni osongina kuzatib boring",
-        "Titul8": "Barcha xaridlaringizni qayd qilib qo'ying",
+        "Titul8": "Barcha xaridlaringizni qayd qilib qo'ying"
     },
     "Footer": {
         "Titul": "Savollaringiz bormi? Bizga 24/7 qo'ng'iroq qiling!",
